fix(zip-014): correct cost analysis and fix architectural documentation
Critical fixes from bot swarm review:

1. Validator costs: /month → /month (correct per-key pricing)
2. Experience encryption: ,000/month → ,000/month (correct key storage cost)
3. Add hierarchical key recommendation to reduce to ~/month
4. Update 3-year TCO calculations with accurate savings

Architectural fixes:
- Remove references to fictional 'github.com/luxfi/kms/client' Go package
- Replace with actual Lux node crypto packages (crypto/bls, crypto/aes)
- Clarify HSM integration options: PKCS#11, Cloud SDKs, REST API
- Update all code examples to use standard Go crypto libraries
- Add note explaining Lux KMS is TypeScript/Node.js service, not Go client

--- a/ZIPs/zip-014.md
+++ b/ZIPs/zip-014.md
@@ -79,32 +79,37 @@ Zoo Network requires secure key management for:
 
 ### KMS Client Integration
 
-Zoo nodes use the standard Lux KMS client without modifications:
+Zoo nodes integrate with HSMs using the same crypto packages as Lux nodes:
 
 ```go
 package validator
 
 import (
-    luxkms "github.com/luxfi/kms/client"
+    "github.com/luxfi/node/crypto/bls"
     "github.com/luxfi/node/ids"
 )
 
-// Zoo validator uses Lux KMS directly
+// Zoo validator uses HSM-backed BLS signing
 type ZooValidator struct {
-    kms    luxkms.Client
-    keyID  string
-    nodeID ids.NodeID
+    signer   bls.Signer  // HSM-backed via PKCS#11 or software
+    keyID    string
+    nodeID   ids.NodeID
 }
 
 // Sign block using BLS threshold signature (same as Lux)
 func (v *ZooValidator) SignBlock(block []byte) (*bls.Signature, error) {
-    sig, err := v.kms.SignBLS(context.Background(), v.keyID, block)
+    sig, err := v.signer.Sign(block)
     if err != nil {
         return nil, fmt.Errorf("HSM signing failed: %w", err)
     }
     return sig, nil
 }
 ```
+
+**HSM Integration Options**:
+1. **Direct PKCS#11**: Zoo nodes can use YubiHSM 2, Zymbit, or other PKCS#11 HSMs directly
+2. **Lux KMS REST API**: Call Lux KMS service (TypeScript/Node.js) via HTTP for centralized key management
+3. **Google Cloud KMS SDK**: Use Google's Go SDK for cloud-based HSM integration
 
 ### Experience Library Encryption
 
@@ -114,12 +119,14 @@ User experience data encrypted using standard AES-256-GCM:
 package experience
 
 import (
-    luxkms "github.com/luxfi/kms/client"
+    "crypto/aes"
+    "crypto/cipher"
+    "crypto/rand"
+    "io"
 )
 
 type ExperienceLibrary struct {
-    kms     luxkms.Client
-    userKeyID string
+    masterKey []byte  // 32-byte master key (from HSM or KMS)
 }
 
 // Encrypt user experience data before storage
@@ -127,15 +134,28 @@ func (e *ExperienceLibrary) EncryptExperience(
     userLuxID string,
     experience []byte,
 ) ([]byte, error) {
-    // Generate per-user encryption key (or retrieve existing)
-    keyID := e.getUserKeyID(userLuxID)
+    // Derive per-user key from master key + user ID (HKDF)
+    userKey := e.deriveUserKey(userLuxID)
 
-    // Encrypt using HSM
-    encrypted, err := e.kms.Encrypt(context.Background(), keyID, experience)
+    // Create AES-256-GCM cipher
+    block, err := aes.NewCipher(userKey)
     if err != nil {
-        return nil, fmt.Errorf("experience encryption failed: %w", err)
+        return nil, fmt.Errorf("cipher creation failed: %w", err)
     }
 
+    gcm, err := cipher.NewGCM(block)
+    if err != nil {
+        return nil, fmt.Errorf("GCM creation failed: %w", err)
+    }
+
+    // Generate nonce
+    nonce := make([]byte, gcm.NonceSize())
+    if _, err := io.ReadFull(rand.Reader, nonce); err != nil {
+        return nil, fmt.Errorf("nonce generation failed: %w", err)
+    }
+
+    // Encrypt and authenticate
+    encrypted := gcm.Seal(nonce, nonce, experience, nil)
     return encrypted, nil
 }
 
@@ -144,31 +164,51 @@ func (e *ExperienceLibrary) DecryptExperience(
     userLuxID string,
     encrypted []byte,
 ) ([]byte, error) {
-    keyID := e.getUserKeyID(userLuxID)
+    userKey := e.deriveUserKey(userLuxID)
 
-    decrypted, err := e.kms.Decrypt(context.Background(), keyID, encrypted)
+    block, err := aes.NewCipher(userKey)
     if err != nil {
-        return nil, fmt.Errorf("experience decryption failed: %w", err)
+        return nil, fmt.Errorf("cipher creation failed: %w", err)
+    }
+
+    gcm, err := cipher.NewGCM(block)
+    if err != nil {
+        return nil, fmt.Errorf("GCM creation failed: %w", err)
+    }
+
+    nonceSize := gcm.NonceSize()
+    if len(encrypted) < nonceSize {
+        return nil, fmt.Errorf("ciphertext too short")
+    }
+
+    nonce, ciphertext := encrypted[:nonceSize], encrypted[nonceSize:]
+    decrypted, err := gcm.Open(nil, nonce, ciphertext, nil)
+    if err != nil {
+        return nil, fmt.Errorf("decryption failed: %w", err)
     }
 
     return decrypted, nil
 }
 ```
 
+**Key Management Options**:
+- **Master Key from HSM**: Use YubiHSM 2 or Zymbit to store/derive the master encryption key
+- **Cloud KMS**: Retrieve master key from Google Cloud KMS at startup
+- **Hierarchical Keys**: Derive per-user keys using HKDF from master key + user ID (eliminates need for 100K cloud keys)
+
 ### Bridge Message Signing
 
-Cross-chain messages signed using same KMS as Lux:
+Cross-chain messages signed using BLS signatures:
 
 ```go
 package bridge
 
 import (
-    luxkms "github.com/luxfi/kms/client"
+    "github.com/luxfi/node/crypto/bls"
 )
 
 type ZooBridge struct {
-    kms       luxkms.Client
-    bridgeKey string
+    signer   bls.Signer  // HSM-backed or software signer
 }
 
 // Sign LP-401 bridge message (to Lux or Hanzo)
@@ -177,14 +217,19 @@ func (b *ZooBridge) SignBridgeMessage(
     message []byte,
 ) ([]byte, error) {
     // Use BLS signature for bridge consensus
-    sig, err := b.kms.SignBLS(context.Background(), b.bridgeKey, message)
+    sig, err := b.signer.Sign(message)
     if err != nil {
         return nil, fmt.Errorf("bridge signing failed: %w", err)
     }
 
-    return sig.Marshal(), nil
+    return sig, nil
 }
 ```
+
+**Bridge Signing Options**:
+- **YubiHSM 2 via PKCS#11**: Hardware-backed bridge signing
+- **Zymbit HSM6**: Edge-optimized bridge signing for Raspberry Pi validators
+- **Software BLS**: For development/testing (private key in secure storage)
 
 ### Configuration
 
@@ -332,44 +377,71 @@ All 8 HSM providers from LP-325 are supported:
 
 | Component | Provider | Monthly Cost |
 |-----------|----------|--------------|
-| **Validator Keys (21)** | Google Cloud KMS | $630 |
-| **Experience Encryption (100K users)** | Google Cloud KMS | $3,000 |
+| **Validator Keys (21)** | Google Cloud KMS | $4 |
+| **Experience Encryption (100K users)** | Google Cloud KMS | $6,000 |
 | **Bridge Signing** | Included | $0 |
 | **DID Operations** | Included | $0 |
-| **Total KMS Cost** | | **$3,630** |
+| **Total KMS Cost** | | **$6,004** |
 
-**Experience Encryption Cost Breakdown**:
-- Per-user encryption keys: 100,000 keys × $0.03/month = $3,000/month
-- **Note**: Use shared keys with proper access control to reduce to ~$100/month if privacy requirements allow
+**Cost Breakdown**:
+- **Validator Keys**: 21 keys × $0.06/month storage + ~100K ops/month @ $0.03/10K = $1.26 + $0.30 ≈ $4/month
+- **Experience Encryption** (per-user keys): 100,000 keys × $0.06/month storage = $6,000/month
+- **Recommended**: Use hierarchical key structure (1 master key + derived per-user keys) to reduce to ~$10/month
 
 **Alternative with YubiHSM 2**:
-- One-time: $650 per validator × 21 = $13,650
-- Monthly: $0 (experience encryption in-app, not HSM-based)
-- 3-year TCO: **$13,650** (vs $130,680 for Google KMS)
-- Savings: **90%**
+- One-time: $650 × 2 devices (HA setup) = $1,300
+- Monthly: $0 (experience encryption in-app using AES-256-GCM)
+- 3-year TCO: **$1,300** (vs $216,144 for Google KMS with per-user keys)
+- Savings: **99.4%**
+
+**Alternative with Zymbit HSM6** (Recommended for Raspberry Pi validators):
+- One-time: $155 × 21 validators = $3,255
+- Monthly: $0 (distributed validator setup, in-app experience encryption)
+- 3-year TCO: **$3,255** (vs $216,144 for Google KMS)
+- Savings: **98.5%**
 
 ## Implementation
 
 ### Repository Integration
 
-Zoo node implementation uses Lux KMS client directly:
+Zoo validators are implemented as part of the Lux node:
 
 ```bash
-# Zoo node dependencies
-go get github.com/luxfi/kms/client  # Lux KMS client
-go get github.com/luxfi/node/crypto # For BLS, ECDSA
+# Zoo validator uses Lux node crypto packages
+cd /path/to/lux/node
+go get github.com/luxfi/node/crypto/bls    # BLS signatures
+go get github.com/luxfi/node/crypto/secp256k1  # ECDSA
 
-# No custom KMS package needed - use Lux KMS as-is
+# No separate KMS client needed - HSM integration via:
+# 1. PKCS#11 (YubiHSM 2, Zymbit)
+# 2. Cloud SDKs (Google Cloud KMS Go SDK)
+# 3. REST API calls (to Lux KMS service if deployed)
 ```
 
 ### Installation
 
+**Option 1: Hardware HSM (Recommended for Production)**
 ```bash
-# Install Lux KMS client library
-go get github.com/luxfi/kms/client
+# Install YubiHSM 2 or Zymbit HSM6
+# Configure PKCS#11 library path in zoo-node config
+```
 
-# Configure HSM provider (same as Lux)
-# See LP-325 for provider-specific setup
+**Option 2: Google Cloud KMS**
+```bash
+# Install Google Cloud SDK
+go get cloud.google.com/go/kms
+
+# Configure service account credentials
+export GOOGLE_APPLICATION_CREDENTIALS=/path/to/credentials.json
+```
+
+**Option 3: Lux KMS Service (Centralized)**
+```bash
+# Deploy Lux KMS (TypeScript/Node.js) on server
+npm install @luxfi/kms
+
+# Configure Zoo node to call KMS REST API
+# See LP-325 for Lux KMS deployment guide
 ```
 
 ### Example: Complete Validator Flow
@@ -378,38 +450,48 @@ go get github.com/luxfi/kms/client
 package main
 
 import (
-    "context"
-    luxkms "github.com/luxfi/kms/client"
+    "crypto/aes"
+    "crypto/cipher"
+    "github.com/luxfi/node/crypto/bls"
 )
 
 func main() {
-    // Initialize Lux KMS (same as Lux validators)
-    kms, err := luxkms.NewClient(ctx, "zoo-node-config.yaml")
-    if err != nil {
-        panic(err)
-    }
+    // Initialize HSM-backed BLS signer
+    // Option 1: Load from YubiHSM/Zymbit via PKCS#11
+    // Option 2: Load from Google Cloud KMS SDK
+    // Option 3: Software signer (for dev/test)
+    signer := loadBLSSigner()
 
     // 1. Sign validator block
-    blockSig, err := kms.SignBLS(ctx, "validator-key", blockBytes)
+    blockSig, err := signer.Sign(blockBytes)
     if err != nil {
         panic(err)
     }
 
-    // 2. Encrypt user experience
-    encrypted, err := kms.Encrypt(ctx, "user-exp-key", experienceData)
+    // 2. Encrypt user experience (in-app AES-256-GCM)
+    masterKey := getMasterKeyFromHSM()  // 32-byte key from HSM/KMS
+    userKey := deriveUserKey(masterKey, userLuxID)
+    encrypted, err := encryptAESGCM(userKey, experienceData)
     if err != nil {
         panic(err)
     }
 
     // 3. Sign bridge message to Hanzo
-    bridgeSig, err := kms.SignBLS(ctx, "bridge-key", bridgeMsg)
+    bridgeSig, err := signer.Sign(bridgeMsg)
     if err != nil {
         panic(err)
     }
 
-    // All operations use same KMS client - no custom code needed
+    // All operations use Lux node crypto primitives
+    // HSM integration via PKCS#11, cloud SDK, or REST API
 }
 ```
+
+**Key Differences from Fictional "Lux KMS Client"**:
+- Zoo validators use `github.com/luxfi/node/crypto/bls` directly (not a separate KMS client)
+- Experience encryption uses standard Go `crypto/aes` + `crypto/cipher` packages
+- HSM integration via PKCS#11 interface or cloud provider SDKs
+- Optional integration with Lux KMS service (TypeScript/Node.js) via REST API for centralized key management
 
 ## Comparison with Hanzo KMS
 
