fix(zip-014): correct crypto package path to luxfi/crypto
CRITICAL FIX: Changed all references from github.com/luxfi/node/crypto
to github.com/luxfi/crypto (correct package path)

- Fixed 6 instances of wrong import path
- Correct: github.com/luxfi/crypto/bls
- Incorrect: github.com/luxfi/node/crypto/bls

--- a/ZIPs/zip-014.md
+++ b/ZIPs/zip-014.md
@@ -85,7 +85,7 @@ Zoo nodes integrate with HSMs using the same crypto packages as Lux nodes:
 package validator
 
 import (
-    "github.com/luxfi/node/crypto/bls"
+    "github.com/luxfi/crypto/bls"
     "github.com/luxfi/node/ids"
 )
 
@@ -204,7 +204,7 @@ Cross-chain messages signed using BLS signatures:
 package bridge
 
 import (
-    "github.com/luxfi/node/crypto/bls"
+    "github.com/luxfi/crypto/bls"
 )
 
 type ZooBridge struct {
@@ -409,8 +409,8 @@ Zoo validators are implemented as part of the Lux node:
 ```bash
 # Zoo validator uses Lux node crypto packages
 cd /path/to/lux/node
-go get github.com/luxfi/node/crypto/bls    # BLS signatures
-go get github.com/luxfi/node/crypto/secp256k1  # ECDSA
+go get github.com/luxfi/crypto/bls    # BLS signatures
+go get github.com/luxfi/crypto/secp256k1  # ECDSA
 
 # No separate KMS client needed - HSM integration via:
 # 1. PKCS#11 (YubiHSM 2, Zymbit)
@@ -452,7 +452,7 @@ package main
 import (
     "crypto/aes"
     "crypto/cipher"
-    "github.com/luxfi/node/crypto/bls"
+    "github.com/luxfi/crypto/bls"
 )
 
 func main() {
@@ -488,7 +488,7 @@ func main() {
 ```
 
 **Key Differences from Fictional "Lux KMS Client"**:
-- Zoo validators use `github.com/luxfi/node/crypto/bls` directly (not a separate KMS client)
+- Zoo validators use `github.com/luxfi/crypto/bls` directly (not a separate KMS client)
 - Experience encryption uses standard Go `crypto/aes` + `crypto/cipher` packages
 - HSM integration via PKCS#11 interface or cloud provider SDKs
 - Optional integration with Lux KMS service (TypeScript/Node.js) via REST API for centralized key management
